# EzanVaktiAPI

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: deploy.yml  update-data.yml
.kamal/: secrets
app/: cache.py  config.py  dependencies.py  main.py  models.py  rate_limit.py  routes.py  svc_models.py  utils.py
app/core/: config.py  errors.py  security.py
app/infrastructure/cache/: backends.py  service.py
app/infrastructure/diyanet_api/: client.py
app/middleware/: __init__.py  cache.py  rate_limit.py
app/models/: domain.py  schemas.py
app/services/: api.py  cache.py
app/static/: index.html
app/static/data/: countries.json  lookup.json
app/static/data/ilceler/: 1875.json  500.json  501.json  502.json  503.json  504.json  505.json  506.json  507.json  508.json  509.json  510.json  511.json  512.json  513.json  514.json  515.json  516.json  517.json  518.json  519.json  520.json  521.json  522.json  523.json  524.json  525.json  526.json  527.json  528.json  529.json  530.json  531.json  532.json  533.json  534.json  535.json  536.json  537.json  538.json  (+320 more)
app/static/data/sehirler/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  134.json  135.json  (+164 more)
config/: deploy.yml
public/stylesheets/: style.css
routes/: index.js
scripts/: country_name_mapping.json  download.py  setup.sh  transform.py  validate.py
views/: index.jade  layout.jade
