[project]
name = "ezanvakti-api"
version = "0.4.0"
description = "Diyanet Isleri Baskanligi Ezan Vakti Servisi"
readme = "README.md"
requires-python = ">=3.12, <3.13" # fastapi-cache2 depends on pendulum which does not support python 3.13 yet
dependencies = [
    "fastapi[standard]>=0.115.4",
    "pydantic-settings>=2.6.1",
    "zeep>=4.3.1",
    "slowapi>=0.1.9",
    "redis[hiredis]>=4.6.0",
]

[tool.uv]
dev-dependencies = [
    "python-dotenv>=1.0.1",
]
