[project]
name = "ezanvakti-api"
version = "0.6.0"
description = "Diyanet Isleri Baskanligi Ezan Vakti Servisi"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pydantic-settings>=2.12.0",
    "slowapi>=0.1.9",
    "redis[hiredis]>=7.1.0",
    "httpx>=0.28.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.2.1",
    "beautifulsoup4>=4.14.3",
    "pydantic>=2.12.5",
    "tenacity>=9.1.2",
]

[tool.ty.src]
exclude = ["scripts/"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
